# datumhub

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
src/datumhub/: auth.py  config.py  database.py  main.py  models.py  password.py
src/datumhub/routes/: auth.py  catalog.py  packages.py  publishers.py  users.py
src/datumhub/templates/: base.html  catalog.html  dataset.html
tests/: conftest.py  test_auth.py  test_catalog.py  test_packages.py  test_users.py
