[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datumhub"
dynamic = ["version"]
description = "Registry API for DatumHub — open datasets, open source."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DatumHub Contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
datumhub = "datumhub.main:run"

[tool.hatch.version]
path = "src/datumhub/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/datumhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
